# mdcii-engine

./: .gitignore  README.md
doc/: README.md  bitflags.md  gad.md  grafikreihenfolge.md  mdcii-bshdump.md  mdcii-bshpacker.md  mdcii-sdltest.md  produktion.md  unbekannt.md  warencodes.md
src/: .clang-format  CMakeLists.txt  animation.hpp  bebauung.cpp  bebauung.hpp  bebauung.txt  bildspeicher.cpp  bildspeicher.hpp  bildspeicher_pal8.cpp  bildspeicher_pal8.hpp  bildspeicher_rgb24.cpp  bildspeicher_rgb24.hpp  block.cpp  block.hpp  bsh_leser.cpp  bsh_leser.hpp  bsh_schreiber.cpp  bsh_schreiber.hpp  bshdump.cpp  bshpacker.cpp  cod_parser.cpp  cod_parser.hpp  codcat.cpp  files.cpp  files.hpp  files_to_check.hpp  generischer_bsh_leser.hpp  grafiken.cpp  grafiken.hpp  grafiken.txt  grafiken_1602.txt  grafikinfo.cpp  grafikinfo.hpp  haeuser.hpp  insel.cpp  insel.hpp  inselbmp.cpp  iteratoren.hpp  kamera.cpp  kamera.hpp  (+18 more)
src/proto/: CMakeLists.txt  cod.proto
src/test/cod_parser_test/: cod_parser_test.cpp  test.cod  test.txt  test2.cod  test2.txt  test3.cod  test3.txt  test_array.cod  test_array.txt
src/test/data_field_reader/: haus_values.py  read_haus_objekt.py
